--- a/src/features/gallery/gallery.css
+++ b/src/features/gallery/gallery.css
@@ -15,7 +15,13 @@
 
 .image-container {
   margin: 6px;
-  width: 200px;
+  width: 400px;
+}
+
+@media screen and (min-width: 600px) {
+  .image-container {
+    width: 200px;
+  }
 }
 
 .image {
